fix: Adjust spacing on investment page

--- a/src/styles/Guaranteed.css
+++ b/src/styles/Guaranteed.css
@@ -9,7 +9,6 @@
   display: flex;
   flex-direction: column;
   gap: 1em;
-  height: 100vh;
   flex-basis: 30%;
 }
 
